# zephyr

./: CODEOWNERS
cmake/emu/: qemu.cmake
include/: device.h
include/debug/: tracing_core.h  tracing_format.h
include/linker/: common-rom.ld
include/power/: rt_dpm.h
scripts/: sanitycheck
scripts/tracing/: trace_capture_usb.py
soc/arm/atmel_sam/same70/: soc_config.c
subsys/debug/: Kconfig
subsys/debug/tracing/: CMakeLists.txt  tracing_backend_posix.c  tracing_backend_uart.c  tracing_backend_usb.c  tracing_buffer.c  tracing_core.c  tracing_format.c  tracing_format_async.c  tracing_format_sync.c  tracing_packet.c
subsys/debug/tracing/ctf/: ctf_top.h
subsys/debug/tracing/ctf/bottoms/generic/: ctf_bottom.h
subsys/debug/tracing/include/: tracing_backend.h  tracing_buffer.h  tracing_core.h  tracing_format.h  tracing_packet.h
subsys/power/: CMakeLists.txt  device_pm.c  rt_dpm.c
tests/subsys/debug/tracing/: CMakeLists.txt  README.txt  metadata  prj_posix.conf  prj_posix_data.conf  prj_uart.conf  prj_uart_data.conf  prj_usb.conf  prj_usb_data.conf  testcase.yaml
tests/subsys/debug/tracing/src/: tracing_data_format_test.c  tracing_data_format_test.h  tracing_string_format_test.c
